<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlert"
                android:text="@string/are_you_sure_dialog"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/yesButton"
                android:background="@color/colorAccent"
                android:layout_marginEnd="8dp"
                android:text="@string/yes_dialog_delete"
                android:textColor="@android:color/white"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/noButton"
                android:background="@color/colorAccent"
                android:layout_marginStart="8dp"
                android:text="@string/no_button_dialog"
                android:textColor="@android:color/white"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/yesButton"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>